~fix visual bugs on small screens

--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -34,12 +34,6 @@ $pageButtonSize: 40px;
 
     &-prev,
     &-page,
-    &-next {
-      cursor: pointer;
-    }
-
-    &-prev,
-    &-page,
     &-ellipsis,
     &-next {
       @include text(Montserrat, normal, 12px, $pageButtonSize, $darkShade50, 0);
@@ -52,20 +46,14 @@ $pageButtonSize: 40px;
 
       @media (max-width: 450px) {
         position: relative;
-        width: 25px;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
       }
 
       > a {
         color: inherit;
         text-decoration: none;
-
-        @media (max-width: 450px) {
-          position: absolute;
-          left: 0;
-          line-height: 25px;
-          width: 25px;
-          vertical-align: middle;
-        }
       }
 
       &.active {
@@ -80,14 +68,16 @@ $pageButtonSize: 40px;
     }
 
     &-prev,
+    &-page,
     &-next {
-      color: white;
+      cursor: pointer;
     }
 
     &-prev,
     &-next {
       @include icon();
 
+      color: white;
       font-size: 24px;
       background: linear-gradient($green 0%, $greenGradientSecond 100%);
     }
