--- a/src/site-pages/room-details/room-details.scss
+++ b/src/site-pages/room-details/room-details.scss
@@ -172,12 +172,15 @@
   }
 
   &__rules-container {
-    @media (max-width: 650px) {
+    @media (max-width: 850px) {
       margin-right: 20px;
+    }
+
+    @media (max-width: 650px) {
       margin-bottom: $verticalGap;
     }
 
-    @media (max-width: 380px) {
+    @media (max-width: 560px) {
       margin-right: 0;
     }
   }
@@ -198,7 +201,7 @@
     min-width: 280px;
     max-width: 340px;
 
-    @media (max-width: 650px) {
+    @media (max-width: 850px) {
       min-width: unset;
       max-width: 253px;
       margin-right: 0;
